# ChangeLog for app-portage/portage-bashrc-ng
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  portage-bashrc-ng-0.14.1-r1.ebuild, portage-bashrc-ng-0.14.1-r2.ebuild,
  +metadata.xml:
  Fixed errors reported by repoman. Added metadata.xml.

  17 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  +portage-bashrc-ng-0.14.1-r2.ebuild,
  +files/portage-bashrc-ng-0.14.1-autopatch-eapi-fix.patch:
  Fixed issues with EAPI=2 and autopatch.

  24 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  -portage-bashrc-ng-0.12_beta.ebuild, -portage-bashrc-ng-0.14.1.ebuild:
  Removed cruft.

  14 Mar 2008; Michał Ziąbkowski <mziab@o2.pl>
  +portage-bashrc-ng-0.14.1-r1.ebuild:
  Another variable collision fixed. This time it's CONFFILE, which was used by
  app-office/openoffice
