@@ -1,7 +1,6 @@
 AUX portage-bashrc-ng-0.14.1-autopatch-eapi-fix.patch 524 RMD160 e4bdeced1d104bcdef90822ccd46ef0962ff4107 SHA1 540675810e7882060d522cb86729ae6a9e968b1a SHA256 9ae44227e7022d97bb28e6044eb799ca596ad145c4e10012ba91de449efc0533
 AUX portage-bashrc-ng-0.14.1-name-collision-filter-flags-fix.patch 2539 RMD160 fc5a5c1b5d218d2f2a14adcdc501788fd30dbd84 SHA1 0619b5c76ad581004b55e70353b49234bbc2992e SHA256 d065953194005a6983b4ad0cca98758eb47ab8a847330123a9ae41d642181e51
 DIST portage-bashrc-ng-0.14.1.tar.bz2 13913 RMD160 be65e6d5aaa43d3004c6fbd960fc1338035983ba SHA1 faadea792f5a41d8779a5ecb6a4d76c8521f21ff SHA256 af291613726d8e817293e159946b3043fee4eb11938fc2d511541fef69eed020
-EBUILD portage-bashrc-ng-0.14.1-r1.ebuild 3655 RMD160 c304bd746e6237b067d4433a432238b1ca3ea1ef SHA1 64844e51653531a1d63a8f8e9fdc9aa073e1bf92 SHA256 478ae991e85369a6d078c12ec30094c930e154007e73f1e069f9cee004d0e49f
 EBUILD portage-bashrc-ng-0.14.1-r2.ebuild 3701 RMD160 d87707282a1f739ce77a80ec879d9924f0083740 SHA1 ff4b1c9e64b0f1bc00ef8e564e8dc1de324e7d28 SHA256 9209fba4fa19140ddeacf70551df10a06ae013763cd1b60f9d8f2273ceeeb26f
-MISC ChangeLog 850 RMD160 d7ae139aadf5fc64af00e69114e9661ce4880b18 SHA1 27ed7bc85affcad3d5ce28cf204c6346872333f6 SHA256 b54032e4ec8342b7c930231cb179346d55ccffead592c4f4c774e4d78fbdc355
+MISC ChangeLog 960 RMD160 7686b8e7ef4a2d93330681d725025f9f33c77779 SHA1 0e951017e43ee80e2e069cb200085b72209f1645 SHA256 944e5b14cd46ff4326d8b8364310566bef4915ebfc34a6d49f6891cdeeb954a1
 MISC metadata.xml 601 RMD160 935cb73ab2168140b35c2618c5dc15694dbec9f2 SHA1 dee40db8b64252ba4dbe289c622a94014bd98aca SHA256 dd01ea4445f049645177792cda7c2ab5b51ca602163bc7052328b31ab3720838
