@@ -1,6 +1,10 @@
 # ChangeLog for app-portage/portage-bashrc-ng
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  29 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
+  -portage-bashrc-ng-0.14.1-r1.ebuild:
+  Dropped old cruft.
 
   21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
   portage-bashrc-ng-0.14.1-r1.ebuild, portage-bashrc-ng-0.14.1-r2.ebuild,
